first pass of users movement simulation in London

--- a/index.html
+++ b/index.html
@@ -1,71 +1,96 @@
 <!doctype html>
 <html><head>
+  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="http://cdn.jsdelivr.net/sockjs/1.0.1/sockjs.min.js"></script>
-    <style>
-      .box {
-          width: 300px;
-          float: left;
-          margin: 0 20px 0 20px;
-      }
-      .box div, .box input {
-          border: 1px solid;
-          -moz-border-radius: 4px;
-          border-radius: 4px;
-          width: 100%;
-          padding: 0px;
-          margin: 5px;
-      }
-      .box div {
-          border-color: grey;
-          height: 300px;
-          overflow: auto;
-      }
-      .box input {
-          height: 30px;
-      }
-      h1 {
-          margin-left: 30px;
-      }
-      body {
-          background-color: #F0F0F0;
-          font-family: "Arial";
-      }
-    </style>
-</head><body lang="en">
-    <h1>SockJS Express example</h1>
+<style>
 
-    <div id="first" class="box">
-      <div></div>
-      <form><input autocomplete="off" value="Type here..."></input></form>
-    </div>
+html, body {
+  height: 100%;
+}
+
+body {
+  margin:0;
+  padding:0;
+}
+
+.mapid {
+  height: 100%;
+  width: 100%;
+  display: table;
+}
+
+</style>
+</head>
+
+
+<body lang="en">
+    <div id="mapid" style="width:1600px;height:900px"></div>
+
+	  <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+    <script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.3.0"></script>
 
     <script>
+
+        var map = new L.Map("mapid", {
+            center: new L.LatLng(51.45, -0.072),
+            zoom: 11
+        });
+        map.addLayer(new L.StamenTileLayer("toner", {
+          detectRetina: true
+        }));
+
+        L.circle([51.28, -0.3], 50, {
+    			color: 'red',
+    			fillColor: '#f03',
+    			fillOpacity: 0.8
+    		}).addTo(map);
+
+        var markers = new L.FeatureGroup();
+
+        function updateCoords() {
+          // Your code here
+        }
+
+
         var sockjs_url = '/echo';
         var sockjs = new SockJS(sockjs_url);
-        $('#first input').focus();
 
-        var div  = $('#first div');
-        var inp  = $('#first input');
-        var form = $('#first form');
-
-        var print = function(m, p) {
-            p = (p === undefined) ? '' : JSON.stringify(p);
-            div.append($("<code>").text(m + ' ' + p));
-            div.append($("<br>"));
-            div.scrollTop(div.scrollTop()+10000);
+        function onOpen(d){
+          console.log('[*] open',d);
+          var intervalID = window.setInterval(function(){
+            sockjs.send("update");
+          }, 2000);
         };
 
-        sockjs.onopen    = function()  {print('[*] open', sockjs.protocol);};
-        sockjs.onmessage = function(e) {print('[.] message', e.data);};
+        function update(data){
+          map.removeLayer(markers);
+          markers = new L.FeatureGroup();
+          var parsed = (JSON.parse(data));
+          parsed.forEach(function(row){
+            if(row.length == 0){
+                return;
+              }
+              circle = L.circle([row[1],row[0]], 50, {
+                  color: 'red',
+                  fillColor: '#f03',
+                  fillOpacity: 0.2
+              });
+              markers.addLayer(circle);
+              map.addLayer(markers);
+          })
+
+        };
+
+        sockjs.onopen    = function()  {onOpen(sockjs.protocol);};
         sockjs.onclose   = function()  {print('[*] close');};
 
-        form.submit(function() {
-            print('[ ] sending', inp.val());
-            sockjs.send(inp.val());
-            inp.val('');
-            return false;
-        });
+        sockjs.onmessage = function(e) {update( e.data);};
+
+
 
     </script>
+
+
 </body></html>
